--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
-.DS_Store
-.tmp
-node_modules/grunt-newer/.cache
-.sass-cache
-.grunt
+### npm
 npm-debug.log
-dist/
-node_modules
-*.sublime-workspace
-.*.swp
-buttons.diff
-.idea
-*.iml
-*.zip
+node_modules/
+
+### Jetbrains
+.idea/
