--- a/examples/docker/build-login-push/op.yml
+++ b/examples/docker/build-login-push/op.yml
@@ -3,14 +3,14 @@ description: Builds an image, logs in to a docker registry, and pushes the image
 inputs:
   - { name: DOCKER_PASSWORD, description: Password for docker registry, isSecret: true}
   - { name: DOCKER_USERNAME, description: Username for docker registry, isSecret: true}
-  - { name: IMAGE_REF, description: Docker image reference (regex: `((registry/)?namespace/)?repo(:tag)?`) }
+  - { name: IMAGE_REF, description: 'Docker image reference (regex: `((registry/)?namespace/)?repo(:tag)?`)' }
   - { name: BUILD_CONTEXT, type: dir }
 run:
   serial:
-    - ->: [ BUILD_CONTEXT, IMAGE_REF ]
-      op: build-image
-    - ->: [ DOCKER_PASSWORD, DOCKER_USERNAME ]
-      op: login
-      <-: [ DOCKER_CONFIG ]
-    - ->: [ DOCKER_CONFIG, IMAGE_REF ]
-      op: push-image
+    - op: build
+      args: [ BUILD_CONTEXT, IMAGE_REF ]
+    - op: login
+      args: [ DOCKER_PASSWORD, DOCKER_USERNAME ]
+      results: [ DOCKER_CONFIG ]
+    - op: push
+      args: [ DOCKER_CONFIG, IMAGE_REF ]
